--- a/main.html
+++ b/main.html
@@ -5,8 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Uz's Coffee</title>
     </head>
+<body>
 
 <div class = "headbanner">
     <h1 class="header"> <img class = "logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo"> Uz's Coffee </h1>
 </div>
+    
+</body>
 
+</html>
