--- a/main.html
+++ b/main.html
@@ -3,14 +3,36 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Uz's Coffee</title>
+        <title>Coffee Portal </title>
+        <link rel="stylesheet" href="style.css"> <!-- Link to CSS file -->
     </head>
 <body>
 
-<div class = "headbanner">
-    <h1 class="header"> <img class = "logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo"> Uz's Coffee </h1>
+<div class="headerbanner">
+    <h1 class="header"> Uz's Coffee </h1>
+    <img class="logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo">
+</div>
+
+<div class="choose"> 
+    <p>
+        What would you like? (selector)
+    </p>
+</div>
+
+<div class="cart">
+    <p>
+        In your cart (tally)
+    </p>
+</div>
+
+<div class="payment">
+    <p>
+        payment methods 
+    </p>
 </div>
     
 </body>
 
 </html>
+
+
