--- a/main.html
+++ b/main.html
@@ -31,6 +31,12 @@
     </p>
 </div>
     
+
+<div class="wrapper">
+    <div class="choose"></div>
+    <div class="cart"></div>
+</div>
+
 </body>
 
 </html>
