box model commits

--- a/main.html
+++ b/main.html
@@ -8,18 +8,22 @@
     </head>
 <body>
 
-<div class="headerbanner">
-    <h1 class="header"> Uz's Coffee </h1>
-    <img class="logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo">
+<div class="wrapper">
+    <div class="headerbanner">
+        <h1 class="header"> Uz's Coffee </h1>
+        <img class="logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo">
+    </div>
 </div>
 
-<div class="choose"> 
-    <p>
+<div class="wrapper"> 
+    <div class="cart">
+        <p>
         What would you like? (selector)
-    </p>
+        </p>
+    </div>
 </div>
 
-<div class="cart">
+<div class="fair cart">
     <p>
         In your cart (tally)
     </p>
@@ -33,7 +37,11 @@
     
 
 <div class="wrapper">
-    <div class="choose"></div>
+    <div class="choose">
+        <p>
+            here we go
+        </p>
+    </div>
     <div class="cart"></div>
 </div>
 
