--- a/main.html
+++ b/main.html
@@ -15,38 +15,26 @@
 </div>
 
 
-<div class="cart">
-    <p>
-    What would you like? (selector)
-    </p>
-</div>
-
-
-<div class="fair cart">
-    <p>
-        In your cart (tally)
-    </p>
-</div>
-
-<div class="payment">
-    <p>
-        payment methods 
-    </p>
-</div>
-    
-
 <div class="wrapper">
     <div class="choose">
-        <h1 class="header"> Uz's Coffee </h1>
-        <img class="logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo">
+        <p>
+            What would you like ? (selector)
+        </p>
     </div>
 
     <div class="cart">
         <p>
-            What would you like? (selector)
+            What would you like? (tally)
         </p>
     </div>
 </div>
+
+<div class="payment">
+    <p>
+        payment methods (apple-pay & google-pay)
+    </p>
+</div>
+    
 
 </body>
 
