--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <div class="wrapper">
     <div class="choose">
         <p>
-            What would you like ? (selector)
+            What would you like ? (selector) <!-- Change to a multiple selector  -->
             <select name="item" id="coffee_item">
                 <option value="">Choose</option>
                 <option value="Cappicino">Cappicino</option>
@@ -34,19 +34,19 @@
     <div class="cart">
         <p>
             In your basket:
-            <span id="cart_items">None</span>
+            <span id="cart_items">None</span> <!-- Basket must update and allow for multiple items with different quantities to be selected at once -->
         </p>
     </div>
 </div>
 
 <div class="payment">
     <p>
-        payment methods (apple-pay & google-pay)
+        payment methods (apple-pay & google-pay) <!-- Apple & googleplay sighn, use hover feature to allow user to choose payement method -->
     </p>
 </div>
 
 
-<script src="script.js"></script
+<script src="script.js"></script <!-- link to js code (how do i/where do i put in my code so that the page is not slow and does not load everything at once) -->
 </body>
 
 
