changing to grid rather than flex

--- a/main.html
+++ b/main.html
@@ -14,7 +14,8 @@
     <img class="logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo">
 </div>
 
-
+<div class="maincontainer">
+<figure> 
 <div class="wrapper">
     <div class="choose">
         <p>
@@ -30,7 +31,9 @@
             Quantity: <input type="number" id="quantity" min="1" value="1">
         </p>
     </div>
+</figure>
 
+<figure>
     <div class="cart">
         <p>
             In your basket:
@@ -38,13 +41,16 @@
         </p>
     </div>
 </div>
+</figure> 
 
+<figure>
 <div class="payment">
     <p>
         payment methods (apple-pay & google-pay) <!-- Apple & googleplay sighn, use hover feature to allow user to choose payement method -->
     </p>
 </div>
-
+</figure>
+</div>
 
 <script src="script.js"></script <!-- link to js code (how do i/where do i put in my code so that the page is not slow and does not load everything at once) -->
 </body>
