grid layout fixed - next step is to, build the cart,basket and payment... then overall look

--- a/main.html
+++ b/main.html
@@ -7,15 +7,18 @@
         <link rel="stylesheet" href="style.css"> <!-- Link to CSS file -->
     </head>
 <body>
-
-
+<div class="maincontainer">
+<figure>
 <div class="headerbanner">
     <h1 class="header"> Uz's Coffee </h1>
     <img class="logo" src="/Users/uzayrsonday/Documents/Projects/Coffee App Code/CoffeeLogo.png" alt="coffee logo">
 </div>
+</figure>
 
-<div class="maincontainer">
+
+
 <figure> 
+    
 <div class="wrapper">
     <div class="choose">
         <p>
@@ -41,6 +44,7 @@
         </p>
     </div>
 </div>
+
 </figure> 
 
 <figure>
@@ -50,6 +54,7 @@
     </p>
 </div>
 </figure>
+
 </div>
 
 <script src="script.js"></script <!-- link to js code (how do i/where do i put in my code so that the page is not slow and does not load everything at once) -->
@@ -57,5 +62,4 @@
 
 
 </html>
-
 
