--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css"> <!-- Link to CSS file -->
     </head>
 <body>
+
 <div class="maincontainer">
 <figure>
 <div class="headerbanner">
@@ -21,6 +22,7 @@
     
 <div class="wrapper">
     <div class="choose">
+        <label class="choose_label" for="choosing">Choose!</label>
         <p>
             What would you like ? (selector) <!-- Change to a multiple selector  -->
             <select name="item" id="coffee_item">
@@ -57,8 +59,9 @@
 
 </div>
 
-<script src="script.js"></script <!-- link to js code (how do i/where do i put in my code so that the page is not slow and does not load everything at once) -->
+<script src="script.js"></script> <!-- link to js code (how do i/where do i put in my code so that the page is not slow and does not load everything at once) -->
 </body>
+
 
 
 </html>
