input type to string

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
         <label class="choose_label" for="choosing">Choose!</label>
         <p>
             What would you like ? (selector) <!-- Change to a multiple selector  -->
-            <select name="item" id="coffee_item">
+            <select type="string" name="item" id="coffee_item">
                 <option value="">Choose</option>
                 <option value="Cappicino">Cappicino</option>
                 <option value="Flat White">Flat White</option>
